# z4c-CMM

./: .gitignore  .gitmodules  README.md
.claude/: inject_infra.sh  ralph-loop.completed-m4.md  ralph-loop.completed.md  ralph-loop.mission5.md  ralph_stop_guard.sh  settings.json
.claude/plugin-patches/: ralph-loop-stop-hook.patched.sh
athenak/: PROVENANCE.md
athenak/src/: CMakeLists.txt
error-database/paper_z4c-CCM/: summary.csv  trials.jsonl
knowledge-database/paper_arxiv-1010.0523v2/: nodes.jsonl  summary.csv
knowledge-database/paper_arxiv-2007.01339/: nodes.jsonl  summary.csv
knowledge-database/paper_arxiv-2308.10361/: nodes.jsonl  summary.csv
knowledge-database/paper_z4c-CCM/: nodes.jsonl  summary.csv
progress/ccm-formulation/: RESEARCH_STATE.md  loop_state_terminal.md  nodal_note.md
progress/ccm-repro/: RESEARCH_STATE.md
progress/eq-dag/: RESEARCH_STATE.md  nodal_note.md
progress/x2-xcts/spectre_src/: CMakeLists.txt  SolveXcts.hpp  SolveXctsVacuum.cpp  SolveXctsVacuum.hpp  TeukolskyWave.cpp  TeukolskyWave.hpp
scripts/: _resume_paper_batteries.sh  analyze_two_pulse.py  ccm_repro_p2a.py  ccm_repro_p2c.py  check_athenak_ccm.py  check_athenak_cpbc.py  check_athenak_teuk.py  check_athenak_teuk_ana.py  check_athenak_teuk_paper.py  check_n14_mode5.jl  check_n14_mode6.jl  check_spectre_oracle.jl  eqdag_check.py  gen_spectre_worldtube.jl  plot_athenak_teuk.py  plot_athenak_teuk_paper.py  plot_paper_figure_teuk.py  plot_paper_figures_v2.py  plot_x2_structural.py  plot_xcts_convergence.py  render_zccm_dag.py  run_xcts_teukolsky_x2.sh  spectre_xcts_env.sh  test_athenak_ccm.sh  test_athenak_cpbc.sh  test_athenak_teuk.sh  test_athenak_teuk_ana.sh  test_athenak_teuk_paper.sh  teuk_exact_waveform.py  teuk_xcts_freedata_check.py  verify_n12_exact_psi4.py  verify_n14_bondi_transform.py  verify_n14_linear_hierarchy.py  verify_n14_linear_psi0_chain.py  verify_n1_varmap.py  verify_n2_boost.py  verify_n3_dictionary.py  verify_n3_exact.py  verify_n4_cpbc_compat.py  verify_n5_gauge.py  (+6 more)
(+359 files in other folders)
